--- a/ITECC_OrderSystem/ITECC_OrderSystem/ITECC_OrderSystem.vbproj
+++ b/ITECC_OrderSystem/ITECC_OrderSystem/ITECC_OrderSystem.vbproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <StartupObject>Sub Main</StartupObject>
+    <StartupObject>ITECC_OrderSystem.My.MyApplication</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
   </PropertyGroup>
