--- a/ITECC_OrderSystem/ITECC_OrderSystem/ITECC_OrderSystem.vbproj
+++ b/ITECC_OrderSystem/ITECC_OrderSystem/ITECC_OrderSystem.vbproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.1.0" />
+    <PackageReference Include="WinForms.DataVisualization" Version="1.9.2" />
   </ItemGroup>
 
   <ItemGroup>
